--- a/.github/workflows/tf_unlock.yml
+++ b/.github/workflows/tf_unlock.yml
@@ -1,36 +1,69 @@
-# This is a basic workflow to help you get started with Actions
+name: "Manual Terraform State Unlock"
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      environment_name:
+        description: "Enter the environment name"
+        required: true
+        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  unlock_state:
+    name: "Unlock Terraform State"
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Set up AWS CLI
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      # Install Terraform using hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0  # Replace with your desired version
+
+      # Query DynamoDB for Lock ID and set it as an environment variable
+      - name: 🔓 Get Lock ID from DynamoDB
+        id: get-lock-id
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          lock_id=$(aws dynamodb get-item --table-name cvs-tf-environment \
+            --key '{"LockID":{"S": "cvs-tf-environment/env:/${{ github.event.inputs.environment_name }}/tf_state"}}' \
+            --attributes-to-get Info \
+            | jq -r '.[].Info.S | fromjson | .ID')
+
+          if [ -z "$lock_id" ]; then
+            echo "No lock ID found"
+            echo "LOCK_ID=none" >> $GITHUB_ENV
+          else
+            echo "Lock ID found: $lock_id"
+            echo "LOCK_ID=$lock_id" >> $GITHUB_ENV
+          fi
+
+      # Conditional unlock if Lock ID is found
+      - name: 🔓 Unlock Terraform State
+        if: env.LOCK_ID != 'none'
+        run: |
+          terraform init \
+            -backend-config="bucket=newtest-14528" \
+            -backend-config="key=network/terraform.tfstate" \
+            -backend-config="region=ap-south-1" \
+            -backend-config="dynamodb_table=cvs-tf-environment" \
+            -backend-config="encrypt=true" \
+            -backend-config="lock_table_key=dev"
+          terraform force-unlock -force $LOCK_ID
+
+      # Notify if no lock ID is found
+      - name: 🚨 No Lock ID Found
+        if: env.LOCK_ID == 'none'
+        run: |
+          echo "No lock ID found, skipping unlock process."
