--- a/.github/workflows/tf_unlock.yml
+++ b/.github/workflows/tf_unlock.yml
@@ -54,7 +54,7 @@ jobs:
       - name: 🔓 Unlock Terraform State
         if: env.LOCK_ID != 'none'
         run: |
-          terraform force-unlock -force ${{ env.LOCK_ID }}
+          terraform force-unlock ${{ env.LOCK_ID }}
 
       # Step 6: Notify if no lock ID is found
       - name: 🚨 No Lock ID Found
